@@ -28,7 +28,7 @@ $EM_CONF[$_EXTKEY] = array(
     'CGLcompliance_note' => '',
     'constraints' => array(
         'depends' => array(
-            'php' => '5.3.5-7.99.99',
+            'php' => '5.3.3-7.99.99',
             'typo3' => '4.5.0-8.99.99',
             'div2007' => '1.7.12-0.0.0',
         ),
